--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/thumbs/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="" alt="" /></a>
+								<a href="images/thumbs/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="芒果" alt="芒果" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/thumbs/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="" alt="" /></a>
+								<a href="images/thumbs/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="火龙果" alt="火龙果" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/thumbs/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="" alt="" /></a>
+								<a href="images/thumbs/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="木瓜" alt="木瓜" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/thumbs/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="" alt="" /></a>
+								<a href="images/thumbs/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="榴莲" alt="榴莲" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/thumbs/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="" alt="" /></a>
+								<a href="images/thumbs/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="百香果" alt="百香果" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/thumbs/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="" alt="" /></a>
+								<a href="images/thumbs/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="莲雾" alt="莲雾" /></a>
 							</article>
 						</div>
 
