--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				<div class="content">
 					<header>
 						<h2>联系我们</h2>
-						<p>广西省南宁市江南区旱塘路南宁市基础工程总公司聚帮物流C区6、7、8仓库</p>
+						<p>广西南宁市江南区壮锦大道旱塘路7号聚帮物流园C6-7-8号仓</p>
 						<p>186-9797-2078 韦总经理</p>
 					</header>
 					<!--
