--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 			.sansserif{font-family:Arial,Helvetica,sans-serif;}
 		</style>
 
+		<div id='wx_pic' style='margin:0 auto;display:none;'>
+		  <img src='images/thumbs/01.jpg.jpg' />
+		</div>
+
 	</head>
 	<body>
 
