--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</style>
 
 		<div id='wx_pic' style='margin:0 auto;display:none;'>
-		  <img src='images/thumbs/01.jpg' />
+		  <img src='images/thumbs/weixin_01.jpg' />
 		</div>
 
 	</head>
