--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>爱果</title>
+
+		<title>爱果果业</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,12 +20,14 @@
 			.sansserif{font-family:Arial,Helvetica,sans-serif;}
 		</style>
 
-		<div id='wx_pic' style='margin:0 auto;display:none;'>
-		  <img src='images/thumbs/weixin_01.jpg' />
-		</div>
+
 
 	</head>
 	<body>
+
+		<div id='wx_pic' style='margin:0 auto;display:none;'>
+			<img src='images/thumbs/weixin_01.jpg' />
+		</div>
 
 		<!-- Header -->
 			<header id="header">
