--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	</head>
 	<body>
 
-		<div id='wx_pic' style='margin:0 auto;display:none;'>
-			<img src='images/thumbs/weixin_01.jpg' />
+		<div id='wx_pic' style='margin:0 auto;display:inline;'>
+			<img width="10px" height="10px" src='images/thumbs/weixin_01.jpg' />
 		</div>
 
 		<!-- Header -->
