--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 
-		<title>爱果果业</title>
+		<title>爱果果业(今日芒果批发价)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -94,6 +94,9 @@
 
 					<!-- Gallery  -->
 						<div class="gallery">
+
+								<a href="images/thumbs/mongo_01.jpg" class="image fit"><img src="images/thumbs/mongo_01.jpg" title="芒果" alt="芒果" /></a>
+
 							<article class="from-left">
 								<a href="images/thumbs/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="芒果" alt="芒果" /></a>
 							</article>
